syntax = "proto3";

service ProductService {
  rpc GetAllProducts (Empty) returns (ProductList);
  rpc GetProductById (GetProductByIdRequest) returns (Product);
  rpc CreateProduct (CreateProductRequest) returns (Product);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductList {
  repeated Product products = 1;
}

message GetProductByIdRequest {
  string id = 1;
}

message Empty {}
